# weblate_reposync

./: README.md  pyproject.toml
src/weblate_reposync/: main.py  parser.py
