[build-system]

requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]

name = "weblate_reposync"
description = "Create Weblate translation components based on repository content."
authors = [
    {name = "András Szalai", email = "andrew@bandipapa.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]

requires-python = ">=3.8"
dependencies = [
    "GitPython>=3.1.27"
]

[tool.setuptools_scm]

[project.scripts]

weblate_reposync = "weblate_reposync.main:start"
